--- a/recovery/root/init.recovery.usb.rc
+++ b/recovery/root/init.recovery.usb.rc
@@ -25,7 +25,7 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-on boot
+on boot && property:ro.boot.usbconfigfs=true
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
     mkdir /dev/usb-ffs 0770 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
@@ -68,6 +68,7 @@ on boot
     symlink /config/usb_gadget/g1/configs/b.1 /config/usb_gadget/g1/os_desc/b.1
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
     write /sys/class/android_usb/android0/f_ffs/aliases adb
+    setprop sys.usb.configfs 1
 
 on property:sys.usb.config=none
     write /config/usb_gadget/g1/UDC "none"
