rova: recovery: Import bg1.25 TERM and set it as default globally
* this fixes nano non starting on OrangeFox's embedded Terminal due to
  missing terminal info
* according to [1] this is the most compatible TERM that fixes any text
  editor displaying.

[1] https://github.com/TeamWin/android_bootable_recovery/commit/546ebc391d621b4cabd4e521d47a38cf3140b43b

Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -11,6 +11,9 @@ on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
+    export TERMINFO /system/etc/terminfo
+    export TERM bg1.25
+
 on init
     setprop ro.build.system_root_image true
     export ANDROID_ROOT /system_root
