rova: init: Always start keymaster to silence logspam
E init : Control message: Could not find 'android.hardware.keymaster@3.0::IKeymasterDevice/default' for ctl.interface_start

Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -21,3 +21,12 @@ on init
 
 on boot
     start set-device-props
+
+    # Always start keymaster to silence logspam
+    mkdir /dsp
+    mkdir /firmware
+    mount ext4 /dev/block/bootdevice/by-name/dsp /dsp ro
+    mount vfat /dev/block/bootdevice/by-name/modem /firmware ro
+    start qseecomd
+    exec u:r:recovery:s0 -- /system/bin/sleep 1s
+    start keymaster-3-0
