rova: Override ro.boot.verifiedbootstate before starting fastbootd
Fastbootd won't function if the value isn't "orange".

Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -18,6 +18,7 @@ on init
     setprop ro.build.system_root_image true
     export ANDROID_ROOT /system_root
     setprop ro.board.platform msm8937
+    exec u:r:recovery:s0 -- /system/bin/resetprop ro.boot.verifiedbootstate orange
 
 on boot
     start set-device-props
