rova: recovery: Start health HAL 2.1
Fastbootd requires that

Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -21,6 +21,7 @@ on init
 
 on boot
     start set-device-props
+    start health-hal-2-1
 
     # Always start keymaster to silence logspam
     mkdir /dsp
